tell when browser < IE8 Fix layout issue for IE8 and 9

--- a/wineshops/static/wineshops/result.css
+++ b/wineshops/static/wineshops/result.css
@@ -107,6 +107,7 @@ position: absolute;
     top: 10px;
     margin: 10px;
     width:400px;
+    display:inline-block;
 }
 
 .logo-shop {
