--- a/wineshops/static/wineshops/style.css
+++ b/wineshops/static/wineshops/style.css
@@ -196,3 +196,7 @@ img {border : 0;}
 .list-market .apps a:hover {
     color: white;
 }
+
+div {
+  display: block;
+}
